# microservice_generator

./: README.md
microservice_cpp/: CMakeLists.txt
microservice_cpp/include/: client_base.h  http_server.hpp  so_wrapper.h  util.hpp
microservice_cpp/logic/: so_wrapper.cpp  test_class.cpp  test_class.h  test_client.h  test_server.h
microservice_cpp/src/: client_base.cpp  http_server.cpp  server.cpp
